--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.jmstoolkit.consumer</groupId>
+  <groupId>com.jmstoolkit</groupId>
   <artifactId>consumer</artifactId>
   <version>1.0.0</version>
   <properties>
