--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.4.1</version>
+        <version>3.1.0</version>
         <configuration>
           <!-- get all project dependencies -->
           <descriptorRefs>
@@ -76,6 +76,7 @@
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-client</artifactId>
       <version>5.15.2</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.swinglabs</groupId>
